--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<artifactId>opensrp-server-interface</artifactId>
 	<packaging>jar</packaging>
 
-	<version>1.0.1</version>
+	<version>2.0.0-alpha1-SNAPSHOT</version>
 
 	<name>opensrp-server-interface</name>
 	<description>OpenSRP Server Interface module</description>
@@ -82,7 +82,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.8.2</version>
+			<version>4.13</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
